src/components/brew-information/brew-information.component.scss
:host {


  ion-card.brew-layout {
    height:233px;
    ion-card-content {
      padding: 8px;
      padding-bottom: 0px;
      padding-top: var(--padding-top);
    }
    .brew-title {

      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;

    }
    // Overwrite
    .button-top-absolute {
      position: absolute;
      top: -20px;
      right: -20px;
      min-height: 20px;
      ion-icon{
        font-size: 18px!important;
        width: 18px!important;
        height: 18px!important;
      }
    }

    .no-ion-col-vertical-padding {
      ion-col {
        padding-top: 0px !important;
        padding-bottom: 0px !important;
      }

    }
    ion-text {
      position: relative;
      top: -5px;
    }
  }
  ion-card.dashboard-layout {


    .vr {
      border-right: 2px solid var(--ion-color-accent);
      height: 60%;
      position: absolute;
      top: 20%;
      bottom: 20%;
      right: 0px;
    }

    // Overwrite
    .button-top-absolute {
      position: absolute;
      top: -10px;
      right: -20px;
      min-height: 20px;
      ion-icon{
        font-size: 18px!important;
        width: 18px!important;
        height: 18px!important;
      }
    }

    .dashboard-time-center {
      display: grid;
      height: 100%;
      align-items: center;
      justify-content: center;
      text-align: center;
    }

    ion-col.center-col {
      display: flex;
      align-items: center
    }

    ion-list {
      background: none;
      margin: 0px;
      padding: 0px;

      ion-col {
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
      }
      ion-item {
        --background: none;
        --padding-start: 0px;
        --padding-end: 0px;
        --inner-padding-end: 0px;
        font-size: 14px;
        --min-height: 0px;

        ion-icon {
          top: 4px;
          position: relative;
          font-size: 17px;
          margin-right: 0px;
          margin-top: 0px;
          margin-bottom: 0px;
        }
      }

    }
  }



}

